--- a/CSVAvaility/Properties/launchSettings.json
+++ b/CSVAvaility/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:44351",
+      "applicationUrl": "http://localhost:36746",
       "sslPort": 44351
     }
   },
@@ -22,7 +22,7 @@
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "csvavaility",
-      "applicationUrl": "https://localhost:44351",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
